# analyze-oura

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  1fetch.py  1fetch_v1.py  1fetch_v2.py  2analyze.py  2analyze_v1.py  2analyze_v2.py  README.md  config.json  cspell-words.txt  cspell.config.yaml  py-requirements.txt  pyproject.toml  requirements.txt  ruff.toml  token-example.txt
.github/workflows/: check.yml  test-python-app.yml
api-v1/: 1fetch_v1.py  2analyze_v1.py
scripts/: run.sh  update.sh
src/: 1fetch_v2.py  2analyze_v2.py  analyze_v2.py  app.py  config.toml  fetch.py  fetch_v2.py  report.py
src/api-v1/: 1fetch_v1.py  2analyze_v1.py
src/deprecated/: 2analyze_v1.py
